--- a/blog.html
+++ b/blog.html
@@ -457,7 +457,7 @@
                             <p class="text-gray-600 mb-6 leading-relaxed">
                                 Telefonunuzun ömrünü uzatacak bakım ipuçları, batarya sağlığını koruma ve en sık karşılaşılan sorunları önleme yöntemleri...
                             </p>
-                            <a href="#" class="group/link inline-flex items-center text-blue-600 font-semibold hover:text-blue-700 transition-colors">
+                            <a href="blog-detay.html" class="group/link inline-flex items-center text-blue-600 font-semibold hover:text-blue-700 transition-colors">
                                 Devamını Oku
                                 <svg class="ml-2 w-4 h-4 group-hover/link:translate-x-1 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"/>
@@ -489,7 +489,7 @@
                             <p class="text-gray-600 mb-6 leading-relaxed">
                                 Bu yılın en yeni laptop modellerini inceledik. Fiyat performans karşılaştırmaları ve hangi kullanıcı tipine hangi model daha uygun...
                             </p>
-                            <a href="#" class="group/link inline-flex items-center text-purple-600 font-semibold hover:text-purple-700 transition-colors">
+                            <a href="blog-detay.html" class="group/link inline-flex items-center text-purple-600 font-semibold hover:text-purple-700 transition-colors">
                                 Devamını Oku
                                 <svg class="ml-2 w-4 h-4 group-hover/link:translate-x-1 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"/>
@@ -521,7 +521,7 @@
                             <p class="text-gray-600 mb-6 leading-relaxed">
                                 Önemli verilerinizi kaybetmemek için düzenli yedekleme nasıl yapılır? Hangi depolama çözümleri güvenli ve etkili?
                             </p>
-                            <a href="#" class="group/link inline-flex items-center text-green-600 font-semibold hover:text-green-700 transition-colors">
+                            <a href="blog-detay.html" class="group/link inline-flex items-center text-green-600 font-semibold hover:text-green-700 transition-colors">
                                 Devamını Oku
                                 <svg class="ml-2 w-4 h-4 group-hover/link:translate-x-1 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"/>
@@ -553,7 +553,7 @@
                             <p class="text-gray-600 mb-6 leading-relaxed">
                                 Intel ve AMD'nin yeni nesil işlemcilerini test ettik. Hangi işlemci hangi iş yükünde daha iyi performans gösteriyor?
                             </p>
-                            <a href="#" class="group/link inline-flex items-center text-orange-600 font-semibold hover:text-orange-700 transition-colors">
+                            <a href="blog-detay.html" class="group/link inline-flex items-center text-orange-600 font-semibold hover:text-orange-700 transition-colors">
                                 Devamını Oku
                                 <svg class="ml-2 w-4 h-4 group-hover/link:translate-x-1 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"/>
@@ -585,7 +585,7 @@
                             <p class="text-gray-600 mb-6 leading-relaxed">
                                 2025 yılında karşılaştığımız en büyük siber güvenlik tehditleri ve bunlara karşı alabileceğimiz önlemler...
                             </p>
-                            <a href="#" class="group/link inline-flex items-center text-red-600 font-semibold hover:text-red-700 transition-colors">
+                            <a href="blog-detay.html" class="group/link inline-flex items-center text-red-600 font-semibold hover:text-red-700 transition-colors">
                                 Devamını Oku
                                 <svg class="ml-2 w-4 h-4 group-hover/link:translate-x-1 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"/>
@@ -617,7 +617,7 @@
                             <p class="text-gray-600 mb-6 leading-relaxed">
                                 Cihazlarınızı temiz tutmak hem hijyen hem de performans açısından çok önemli. İşte doğru temizlik yöntemleri...
                             </p>
-                            <a href="#" class="group/link inline-flex items-center text-indigo-600 font-semibold hover:text-indigo-700 transition-colors">
+                            <a href="blog-detay.html" class="group/link inline-flex items-center text-indigo-600 font-semibold hover:text-indigo-700 transition-colors">
                                 Devamını Oku
                                 <svg class="ml-2 w-4 h-4 group-hover/link:translate-x-1 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"/>
